# Flare

./: .gitignore  CONTRIBUTING.md  FEASIBILITY_AND_ARCHITECTURE.md  README.md  SECURITY.md  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DEVELOPMENT_SETUP.md  PROJECT_STATUS.md
flare-core/: Cargo.toml
flare-core/src/: ffi.rs  lib.rs
flare-core/src/crypto/: encryption.rs  identity.rs  keys.rs  mod.rs  sender_keys.rs
flare-core/src/power/: mod.rs
flare-core/src/protocol/: apk_share.rs  apk_signing.rs  message.rs  mod.rs  rendezvous.rs
flare-core/src/routing/: dedup.rs  mod.rs  neighborhood.rs  peer_table.rs  priority_store.rs  route_guard.rs  router.rs
flare-core/src/storage/: database.rs  mod.rs
flare-core/src/transport/: compression.rs  mod.rs  size_tiers.rs  wifi_direct.rs
ios/: project.yml
ios/Flare/: Info.plist
ios/Flare.xcodeproj/: project.pbxproj
ios/Flare/Sources/: FlareApp.swift
ios/Flare/Sources/BLE/: BLEManager.swift  BleChunker.swift  ChunkReassembler.swift  MeshService.swift  MultipeerManager.swift
ios/Flare/Sources/Data/: FlareRepository.swift  Models.swift
ios/Flare/Sources/Util/: Constants.swift  HapticManager.swift  IdenticonGenerator.swift
scripts/: build-android.sh  setup-android-toolchain.sh
(+92 files in other folders)
