[package]
name = "flare-core"
version = "0.1.0"
edition = "2021"
description = "Flare — Encrypted mesh messaging core library"
license = "GPL-3.0"
repository = "https://github.com/zivelo1/Flare"

[lib]
name = "flare_core"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
argon2 = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# FFI (mobile bindings)
uniffi = { version = "0.28", features = ["cli"] }

# Utilities
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
log = "0.4"

# Bloom filter for deduplication
bloomfilter = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = "z"     # Optimize for size (mobile)
lto = true          # Link-time optimization
strip = true        # Strip debug symbols
codegen-units = 1   # Better optimization
